fix Java heap space