@@ -1,8 +1,4 @@
-#Build:  docker build -t nassiesse/simple-java-ocr .
-#Run: docker run -t -i -p 8080:8080 nassiesse/simple-java-ocr
-
-
-FROM openjdk
+FROM openjdk:8-jdk-alpine
 
 # Refer to Maven build -> finalName
 ARG JAR_FILE=target/PDFAPIMicroservice-0.0.1-SNAPSHOT.jar
@@ -13,5 +9,5 @@ WORKDIR /opt/app
 # cp target/spring-boot-web.jar /opt/app/app.jar
 COPY ${JAR_FILE} app.jar
 
-# java -jar /opt/app/app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+# java -jar -Xmx512m /opt/app/app.jar
+ENTRYPOINT ["java","-jar", "-Xms512m", "-Xmx1152m", "-XX:MaxPermSize=256m", "-XX:MaxNewSize=256m","app.jar"]
